# proj-cec-doggo-ai

./: .gitignore  .gitmodules  README.md  custom_transform.py  download_checkpoints.sh  gauge_dataset.py  gauge_detect.py  gauge_detect_test.py  gauge_eval.py  gauge_net.py  gauge_net_bbox.py  gen_gauge.py  gen_gauge_industry.py  model_server.py  requirements.txt
.github/workflows/: ros_build.yaml
deployment/: .isaac_ros_common-config  Dockerfile.go2  go2.requirements.txt  isaac-doggo.service  supervisord.conf
docker/: .gitignore  Dockerfile  Dockerfile.doggo  Dockerfile.model-server  Dockerfile.ros  docker-compose.yml  ros_entrypoint.sh  start_doggo_sim.sh
doggo/: Gauge Reading Dashboard.json  README.md  Readme.md  docker-entrypoint.sh  errors.txt  humble.sh  install5.1.sh  jazzy.sh  quadruped.py  requirements4.5.txt  requirements5.1.txt
ros.ws/: .gitignore  README.md  docker-entrypoint.sh  setup_onboard_network.sh
ros.ws/src/: .dockerignore  requirements.txt
ros.ws/src/apriltag_navigation/: package.xml  setup.py
ros.ws/src/apriltag_navigation/apriltag_navigation/: apriltag_controller.py
ros.ws/src/apriltag_navigation/config/: apriltag_controller_params.yaml  lite_apriltag_controller_params.yaml
ros.ws/src/apriltag_navigation/launch/: nav.launch.py  nav_lite.launch.py  rsonly.launch.py
ros.ws/src/artie_audio/: package.xml  setup.cfg  setup.py
ros.ws/src/artie_audio/artie_audio/: asr.py  kws_node.py  mic_streamer.py  tts_node.py
ros.ws/src/artie_audio/config/: asr_config.yaml  kws_config.yaml  tts_config.yaml  (+1 more)
ros.ws/src/artie_chatgpt/: package.xml  setup.cfg  setup.py
ros.ws/src/docker/: Dockerfile  README.md  docker-compose-lite.yml  docker-compose.yml
ros.ws/src/gauge_net/gauge_net/: .dockerignore  package.xml  setup.cfg  setup.py
ros.ws/src/gauge_net/gauge_net/config/: config.yaml  config_lite.yaml  qos_config.yaml  qos_config_lite.yaml
ros.ws/src/gauge_net/gauge_net/gauge_net/: gauge_detector.py  gauge_reader.py  gauge_reader_lite.py  gauge_reader_parent.py  qos_settings.py
ros.ws/src/gauge_net/gauge_net/gauge_net/transforms/: custom_transform.py
ros.ws/src/gauge_net/gauge_net/launch/: gauge_net.launch.py  gauge_net_lite.launch.py
ros.ws/src/gauge_net/gauge_net_msgs/: CMakeLists.txt  package.xml
(+8 files in other folders)
