<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gauge_net</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="info@istvanfodor.com">istvan.fodor</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>vision_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>gauge_net_interface</exec_depend>
  <exec_depend>apriltag_navigation</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
